--- a/crypto/src/main/resources/application.properties
+++ b/crypto/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=crypto
+
+server.port=5455
+
+spring.datasource.url=jdbc:mysql://localhost:3306/trading
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=Snehal@6382
+
+spring.jpa.hibernate.ddl-auto=update
